This commit was manufactured by cvs2svn to create tag 'MMBase-1_8_5-rc1'.