@@ -14,7 +14,8 @@ import java.util.*;
 
 import org.mmbase.security.*;
 import org.mmbase.bridge.*;
-import org.mmbase.bridge.util.*;
+import org.mmbase.bridge.util.Queries;
+import org.mmbase.bridge.util.BridgeCollections;
 import org.mmbase.datatypes.DataType;
 import org.mmbase.storage.search.*;
 import org.mmbase.module.core.*;
@@ -31,11 +32,11 @@ import org.w3c.dom.Document;
  * @author Rob Vermeulen
  * @author Pierre van Rooden
  * @author Michiel Meeuwissen
- * @version $Id: BasicNode.java,v 1.223 2007-07-12 09:39:00 michiel Exp $
+ * @version $Id: BasicNode.java,v 1.210.2.6 2007-07-12 09:35:45 michiel Exp $
  * @see org.mmbase.bridge.Node
  * @see org.mmbase.module.core.MMObjectNode
  */
-public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements Node, SizeMeasurable {
+public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements Node, Comparable, SizeMeasurable {
 
 
     private static final Logger log = Logging.getLoggerInstance(BasicNode.class);
@@ -61,15 +62,15 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
      * This is necessary since there is otherwise no sure (and quick) way to determine
      * whether a node is in 'edit' mode (i.e. has a temporary node).
      * Basically, a temporarynodeid is either -1 (invalid), or a negative number smaller than -1
-     * (a temporary number assigned by the system).
+     * (a temporary number assigend by the system).
      */
-    protected int temporaryNodeId = -1;
+    private int temporaryNodeId = -1;
 
     /**
      * The account this node is edited under.
      * This is needed to check whether people have not switched users during an edit.
      */
-    protected String account = null;
+    private String account = null;
 
 
 
@@ -117,7 +118,7 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         setNodeManager(node);
         temporaryNodeId = id;
         init();
-        checkCreate();
+        edit(ACTION_CREATE);
     }
 
     /**
@@ -192,7 +193,6 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         return nodeManager;
     }
 
-    @Override
     public int getNumber() {
         int i = getNode().getNumber();
         // new node, thus return temp id.
@@ -207,67 +207,80 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
      * Returns whether this is a new (not yet committed) node.
      * @return is a new node
      */
-    @Override
     public boolean isNew() {
         return getNode().isNew();
     }
 
-    @Override
     public boolean isChanged(String fieldName) {
         return getNode().getChanged().contains(fieldName);
     }
 
-    @Override
     public boolean isChanged() {
         return getNode().isChanged();
     }
-    @Override
-    public Set<String> getChanged() {
+    public Set getChanged() {
         return Collections.unmodifiableSet(getNode().getChanged());
     }
 
-
-    protected void checkAccount()  {
+    /**
+     * Edit this node.
+     * Check whether edits are allowed and prepare a node for edits if needed.
+     * The type of edit is determined by the action specified, and one of:<br />
+     * ACTION_CREATE (create a node),<br />
+     * ACTION_EDIT (edit node, or change aliasses),<br />
+     * ACTION_DELETE (delete node),<br />
+     * ACTION_COMMIT (commit a node after changes)
+     *
+     * @param action The action to perform.
+     */
+    // there is little common for the 4 actions (code is full of if/else code), I think it would
+    // perhaps be clearer to remove this method, and simply resolve it on the places where it is
+    // used.
+    protected void edit(int action) {
         if (account == null) {
             account = cloud.getAccount();
         } else if (!account.equals(cloud.getAccount())) {
             throw new BridgeException("User context changed. Cannot proceed to edit this node .");
         }
-    }
 
-
-    protected void checkDelete() {
-        checkAccount();
-        int realNumber = getNode().getNumber();
-        if (realNumber != -1) {
-            cloud.verify(Operation.DELETE, realNumber);
+        int realnumber = getNode().getNumber();
+        if (realnumber != -1) {
+            if (action == ACTION_DELETE) {
+                cloud.verify(Operation.DELETE, realnumber);
+            } else if ((action == ACTION_EDIT) && (temporaryNodeId == -1)) {
+                cloud.verify(Operation.WRITE, realnumber);
+            }
         }
+
+        // check for the existence of a temporary node
         if (temporaryNodeId == -1) {
-            temporaryNodeId = cloud.add(this);
-        }
-    }
-    /**
-     * @inheritDoc
-     */
-    @Override
-    protected void checkWrite() {
-        checkAccount();
-        int realNumber = getNode().getNumber();
-        if (realNumber != -1 && temporaryNodeId == -1) {
-            cloud.verify(Operation.WRITE, realNumber);
-        }
-        if (temporaryNodeId == -1) {
-            temporaryNodeId = cloud.add(this);
-        }
-    }
+            // when committing a temporary node id must exist (otherwise fail).
+            if (action == ACTION_COMMIT) {
+                // throw new BasicBridgeException("This node cannot be comitted (not changed).");
+            }
+            // when adding a temporary node id must exist (otherwise fail).
+            // this should not occur (hence internal error notice), but we test it anyway.
 
-    protected void checkCreate() {
-        checkAccount();
-    }
-    protected void checkCommit() {
-        checkAccount();
-    }
+            if (action == ACTION_CREATE) {
+                throw new BridgeException("This node cannot be added. It was not correctly instantiated (internal error).");
+            }
 
+            // when editing a temporary node id must exist (otherwise create one)
+            // This also applies if you remove a node in a transaction (as the transction manager requires a temporary node)
+            //
+            // XXX: If you edit a node outside a transaction, but do not commit or cancel the edits,
+            // the temporarynode will not be removed. This is left to be fixed (i.e.through a time out mechanism?)
+            if ((action == ACTION_EDIT) || ((action == ACTION_DELETE) && (getCloud() instanceof BasicTransaction))) {
+                int id = getNumber();
+                String currentObjectContext = BasicCloudContext.tmpObjectManager.getObject(account, "" + id, "" + id);
+                // store new temporary node in transaction
+                cloud.add(currentObjectContext);
+                setNode(BasicCloudContext.tmpObjectManager.getNode(account, "" + id));
+                //  check nodetype afterwards?
+                temporaryNodeId = id;
+            }
+        }
+    }
 
     /**
      * Protected method to be able to set rnumber when creating a relation.
@@ -275,36 +288,31 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
      * @param value new value of field
      * @since MMBase-1.7
      */
-    @Override
     protected void setValueWithoutChecks(String fieldName, Object value) {
         String result = BasicCloudContext.tmpObjectManager.setObjectField(account, "" + temporaryNodeId, fieldName, value);
         if (TemporaryNodeManager.UNKNOWN == result) {
-            throw new BridgeException("Can't change unknown field '" + fieldName + "', of node " + getNumber() + 
-                                      " of nodeManager '" + getNodeManager().getName() +"'");
+            throw new BridgeException("Can't change unknown field '" + fieldName + "', of node " + getNumber() + " of nodeManager '" + getNodeManager().getName() +"'");
         } else if (TemporaryNodeManager.INVALID_VALUE == result) {
             noderef.storeValue(fieldName, value); // commit() will throw that invalid.
         }
     }
-    @Override
     protected Integer toNodeNumber(Object v) {
         if (v == null) {
             return null;
         } else if (v instanceof Node) {
-            return Integer.valueOf(((Node)v).getNumber());
+            return new Integer(((Node)v).getNumber());
         } else if (v instanceof MMObjectNode) {
-            return Integer.valueOf(((MMObjectNode)v).getNumber());
+            return new Integer(((MMObjectNode)v).getNumber());
         } else {
             // giving up
-            return Integer.valueOf(cloud.getNode(v.toString()).getNumber());
+            return new Integer(cloud.getNode(v.toString()).getNumber());
         }
     }
 
-    @Override
     protected void setSize(String fieldName, long size) {
         getNode().setSize(fieldName, size);
     }
 
-    @Override
     public boolean isNull(String fieldName) {
         return noderef.isNull(fieldName);
     }
@@ -335,7 +343,6 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
     //TODO, silly get-methods could be removed (because in AbstractNode), (calling
     //getValueWithoutProcess) but they depend on noderef now, so I don't dare to do that right ahead.
 
-    @Override
     public boolean getBooleanValue(String fieldName) {
         Boolean result = Boolean.valueOf(noderef.getBooleanValue(fieldName));
         if (nodeManager.hasField(fieldName)) { // gui(..) stuff could not work.
@@ -345,7 +352,6 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         return result.booleanValue();
     }
 
-    @Override
     public Date getDateValue(String fieldName) {
         Date result =  noderef.getDateValue(fieldName);
         if (nodeManager.hasField(fieldName)) { // gui(..) stuff could not work.
@@ -355,7 +361,6 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         return result;
     }
 
-    @Override
     public List getListValue(String fieldName) {
         List result =  noderef.getListValue(fieldName);
         if (nodeManager.hasField(fieldName)) { // gui(..) stuff could not work.
@@ -367,7 +372,6 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
     }
 
 
-    @Override
     public Node getNodeValue(String fieldName) {
         if (fieldName == null || fieldName.equals("number")) {
             return this;
@@ -382,6 +386,8 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
                 result =  new BasicRelationManager(mmobjectNode, cloud);
             } else if (builder instanceof InsRel) {
                 result =  new BasicRelation(mmobjectNode, cloud); //.getNodeManager(noderes.getBuilder().getTableName()));
+            } else if (builder instanceof VirtualBuilder) {
+                result = new VirtualNode((org.mmbase.module.core.VirtualNode)mmobjectNode, cloud);
             } else {
                 result = new BasicNode(mmobjectNode, cloud); //.getNodeManager(noderes.getBuilder().getTableName()));
             }
@@ -394,9 +400,8 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         return result;
     }
 
-    @Override
     public int getIntValue(String fieldName) {
-        Integer result = Integer.valueOf(getNode().getIntValue(fieldName));
+        Integer result = new Integer(getNode().getIntValue(fieldName));
         if (nodeManager.hasField(fieldName)) { // gui(..) stuff could not work.
             Field field = nodeManager.getField(fieldName);
             result = (Integer) field.getDataType().getProcessor(DataType.PROCESS_GET, Field.TYPE_INTEGER).process(this, field, result);
@@ -405,9 +410,8 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
 
     }
 
-    @Override
     public float getFloatValue(String fieldName) {
-        Float result = getNode().getFloatValue(fieldName);
+        Float result = new Float(getNode().getFloatValue(fieldName));
         if (nodeManager.hasField(fieldName)) { // gui(..) stuff could not work.
             Field field = nodeManager.getField(fieldName);
             result = (Float) field.getDataType().getProcessor(DataType.PROCESS_GET, Field.TYPE_FLOAT).process(this, field, result);
@@ -415,9 +419,8 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         return result.floatValue();
     }
 
-    @Override
     public long getLongValue(String fieldName) {
-        Long result = getNode().getLongValue(fieldName);
+        Long result = new Long(getNode().getLongValue(fieldName));
         if (nodeManager.hasField(fieldName)) { // gui(..) stuff could not work.
             Field field = nodeManager.getField(fieldName);
             result = (Long) field.getDataType().getProcessor(DataType.PROCESS_GET, Field.TYPE_LONG).process(this, field, result);
@@ -425,9 +428,8 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         return result.longValue();
     }
 
-    @Override
     public double getDoubleValue(String fieldName) {
-        Double result = getNode().getDoubleValue(fieldName);
+        Double result = new Double(getNode().getDoubleValue(fieldName));
         if (nodeManager.hasField(fieldName)) { // gui(..) stuff could not work.
             Field field = nodeManager.getField(fieldName);
             result = (Double) field.getDataType().getProcessor(DataType.PROCESS_GET, Field.TYPE_DOUBLE).process(this, field, result);
@@ -435,7 +437,6 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         return result.doubleValue();
     }
 
-    @Override
     public byte[] getByteValue(String fieldName) {
         byte[] result = getNode().getByteValue(fieldName);
         if (nodeManager.hasField(fieldName)) { // gui(..) stuff could not work.
@@ -444,7 +445,6 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         }
         return result;
     }
-    @Override
     public java.io.InputStream getInputStreamValue(String fieldName) {
         java.io.InputStream result = getNode().getInputStreamValue(fieldName);
         if (nodeManager.hasField(fieldName)) { // gui(..) stuff could not work.
@@ -454,7 +454,6 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         return result;
     }
 
-    @Override
     public String getStringValue(String fieldName) {
         if ("owner".equals(fieldName)) {
             return getContext();
@@ -467,7 +466,6 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         return result;
     }
 
-    @Override
     public Document getXMLValue(String fieldName) {
         Document result = getNode().getXMLValue(fieldName);
         if (nodeManager.hasField(fieldName)) { // gui(..) stuff could not work.
@@ -479,14 +477,13 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
 
 
 
-    @Override
     public void commit() {
         if (isNew()) {
             cloud.verify(Operation.CREATE, BasicCloudContext.mmb.getTypeDef().getIntValue(getNodeManager().getName()));
         }
-        checkCommit();
+        edit(ACTION_COMMIT);
 
-        Collection<String> errors = validate();
+        Collection errors = validate();
         if (errors.size() > 0) {
             String mes = "node " + getNumber() + noderef.getChanged() + ", builder '" + nodeManager.getName() + "' " + errors.toString();
             noderef.cancel();
@@ -512,9 +509,8 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         }
     }
 
-    @Override
     public void cancel() {
-        checkCommit();
+        edit(ACTION_COMMIT);
         // when in a transaction, let the transaction cancel
         if (cloud instanceof Transaction) {
             ((Transaction)cloud).cancel();
@@ -531,9 +527,8 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
     }
 
 
-    @Override
     public void delete(boolean deleteRelations) {
-        checkDelete();
+        edit(ACTION_DELETE);
         if (isNew()) {
             // remove from the Transaction
             // note that the node is immediately destroyed !
@@ -579,12 +574,12 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         invalidateNode();
     }
 
-    @Override
     public String toString() {
         //return getNode().toString() + "(" + getNode().getClass().getName() + ")";
         return getNode().toString();
         //return "" + super.toString() + " " + getNode().getNumber();
     }
+
 
     /**
      * Recursively deletes relations to relations
@@ -592,17 +587,25 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
      */
     private void deleteRelation(MMObjectNode relation) {
         // first delete Relations to this this relation.
-        // SHOULD security not be checked first?
         try {
-            for (MMObjectNode subRelation : BasicCloudContext.mmb.getInsRel().getRelationNodes(relation.getNumber(), false)) {
+            List subRelations = BasicCloudContext.mmb.getInsRel().getRelationNodes(relation.getNumber(), false);
+            for (Iterator i = subRelations.iterator(); i.hasNext();) {
+                MMObjectNode subRelation = (MMObjectNode) i.next();
                 deleteRelation(subRelation);
             }
         } catch (SearchQueryException sqe) {
             log.error(sqe);
         }
-        cloud.remove(relation);
+        
+        if (cloud instanceof Transaction) {
+            String oMmbaseId = "" + relation.getValue("number");
+            String currentObjectContext = BasicCloudContext.tmpObjectManager.getObject(account, "" + oMmbaseId, oMmbaseId);
+            ((BasicTransaction)cloud).add(currentObjectContext);
+            ((BasicTransaction)cloud).delete(currentObjectContext);
+        } else {
+            relation.remove(cloud.getUser());
+        }
     }
-
 
     /**
      * Removes all relations of a certain type.
@@ -610,7 +613,7 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
      * @param type  the type of relation (-1 = don't care)
      */
     private void deleteRelations(int type) {
-        List<MMObjectNode> relations;
+        List relations = null;
         try {
             if (type == -1) {
                 relations = BasicCloudContext.mmb.getInsRel().getRelationNodes(getNode().getNumber(), false);
@@ -618,25 +621,24 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
                 relations = BasicCloudContext.mmb.getInsRel().getRelationNodes(getNode().getNumber());
             }
         } catch (SearchQueryException  sqe) {
-            log.error(sqe.getMessage()); // should not happen
-            return;
+            log.error(sqe); // should not happen
         }
-        // check first
-        checkAccount();
-        for (MMObjectNode node : relations) {
-            cloud.verify(Operation.DELETE, node.getNumber());
-        }
-
-        // then delete
-        for (MMObjectNode node : relations) {
-            if ((type == -1) || (node.getIntValue("rnumber") == type)) {
-                deleteRelation(node);
+        if (relations != null) {
+            // check first
+            for (Iterator i = relations.iterator(); i.hasNext();) {
+                MMObjectNode node = (MMObjectNode)i.next();
+                cloud.verify(Operation.DELETE, node.getNumber());
+            }
+            // then delete
+            for (Iterator i = relations.iterator(); i.hasNext();) {
+                MMObjectNode node = (MMObjectNode)i.next();
+                if ((type == -1) || (node.getIntValue("rnumber") == type)) {
+                    deleteRelation(node);
+                }
             }
         }
-
     }
 
-    @Override
     public void deleteRelations(String type) throws NotFoundException {
         if ("object".equals(type)) {
             deleteRelations(-1);
@@ -653,13 +655,12 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
     }
 
 
-    @Override
     public RelationList getRelations(String role, String otherNodeManager) throws NotFoundException {
         if (isNew()) {
             // new nodes have no relations
             return BridgeCollections.EMPTY_RELATIONLIST;
         }
-
+        
         if ("".equals(otherNodeManager)) otherNodeManager = null;
         NodeManager otherManager = otherNodeManager == null ? cloud.getNodeManager("object") : cloud.getNodeManager(otherNodeManager);
 
@@ -708,7 +709,6 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
      *
      * @see Queries#createRelationNodesQuery Should perhaps be implemented with that
      */
-    @Override
     public RelationList getRelations(String role, NodeManager nodeManager, String searchDir) throws NotFoundException {
         if (isNew()) {
             // new nodes have no relations
@@ -720,16 +720,14 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         NodeManager nm = query.getNodeManager();
         assert query.getNodeStep() instanceof RelationStep;
         // assert nm instanceof RelationManager; cannot assert his, because if the role is null, no relation manager can be created (the nodemanager will be insrel).
-        return new CollectionRelationList(nm.getList(query), cloud);
+        return (RelationList) nm.getList(query);
     }
 
-    @Override
     public boolean hasRelations() {
         return getNode().hasRelations();
     }
 
 
-    @Override
     public int countRelatedNodes(NodeManager otherNodeManager, String role, String direction) {
         if (isNew()) return 0;
         if (otherNodeManager == null || otherNodeManager.getName().equals("object")) {
@@ -746,7 +744,7 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
                 MMObjectNode relDefNode = ((BasicRelationManager) insrel).relDefNode;
                 if (relDefNode != null) {
                     StepField rnumber = query.getStepField(insrel.getField("rnumber"));
-                    query.setConstraint(query.createConstraint(rnumber, Integer.valueOf(relDefNode.getNumber())));
+                    query.setConstraint(query.createConstraint(rnumber, new Integer(relDefNode.getNumber())));
                 }
             }
 
@@ -758,7 +756,7 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
             StepField snumber = query.getStepField(insrel.getField("snumber"));
             StepField dnumber = query.getStepField(insrel.getField("dnumber"));
 
-            Integer number = Integer.valueOf(getNumber());
+            Integer number = new Integer(getNumber());
 
             switch(dir) {
             case RelationStep.DIRECTIONS_DESTINATION: {
@@ -787,7 +785,7 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
             Step step = count.addRelationStep(otherNodeManager, role, direction, false).getPrevious();
             count.addNode(step, this);
             count.addAggregatedField(step, nodeManager.getField("number"), AggregatedField.AGGREGATION_TYPE_COUNT);
-            Node result = cloud.getList(count).get(0);
+            Node result = (Node) cloud.getList(count).get(0);
             return result.getIntValue("number");
         }
     }
@@ -799,7 +797,7 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
 
         NodeList l1 = BridgeCollections.EMPTY_NODELIST;
         NodeList l2 = BridgeCollections.EMPTY_NODELIST;
-
+       
         TypeRel typeRel = BasicCloudContext.mmb.getTypeRel();
         if (role == null) {
             int allowedOtherNumber = otherManager == null || "object".equals(otherManager.getName()) ? 0 : otherManager.getNumber();
@@ -838,7 +836,6 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
      * @see Queries#createRelatedNodesQuery Should perhaps be implemented with that.
      * @since MMBase-1.6
      */
-    @Override
     public NodeList getRelatedNodes(NodeManager otherManager, String role, String searchDir) {
         if (log.isDebugEnabled()) {
             log.debug("type(" + otherManager.getName() + "), role(" + role + "), dir(" + searchDir + ")");
@@ -855,17 +852,15 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         return query.getNodeManager().getList(query);
     }
 
-    @Override
     public int countRelatedNodes(String type) {
         if (isNew()) return 0;
         return getNode().getRelationCount(type);
     }
 
-    @Override
     public StringList getAliases() {
         NodeManager oalias = cloud.getNodeManager("oalias");
         NodeQuery q = oalias.createQuery();
-        Constraint c = q.createConstraint(q.getStepField(oalias.getField("destination")), Integer.valueOf(getNumber()));
+        Constraint c = q.createConstraint(q.getStepField(oalias.getField("destination")), new Integer(getNumber()));
         q.setConstraint(c);
         NodeList aliases = oalias.getList(q);
         StringList result = new BasicStringList();
@@ -881,8 +876,9 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         // Usually the temporaryNodes hashtable shall not be
         // too full.
         if (cloud instanceof Transaction) {
-            Map<String, MMObjectNode> tnodes = MMObjectBuilder.temporaryNodes;
-            for (MMObjectNode mynode : tnodes.values()) {
+            Map tnodes = MMObjectBuilder.temporaryNodes;
+            for (Iterator e = tnodes.values().iterator(); e.hasNext();) {
+                MMObjectNode mynode = (MMObjectNode)e.next();
                 if (mynode.getName().equals("oalias")){
                     String dest = mynode.getStringValue("_destination");
                     if ((account + "_" + temporaryNodeId).equals(dest)) {
@@ -894,16 +890,31 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
 
         return result;
     }
+    /**
+     * Throws exception if node alias already exists
+     * @since MMBase-1.8.4
+     */
+    protected void checkAlias(String aliasName) {
+        Node otherNode = cloud.hasNode(aliasName) ? cloud.getNode(aliasName) : null;
+        if (otherNode != null) {
+            throw new BridgeException("Alias " + aliasName + " could not be created. It is an alias for " + otherNode.getNodeManager().getName() + " node " + otherNode.getNumber() + " already");
+        }
+    }
 
-
-    @Override
     public void createAlias(String aliasName) {
-        checkWrite();
-        if (isNew()) {
-            cloud.checkAlias(aliasName);
+        edit(ACTION_EDIT);
+        if (cloud instanceof Transaction) {
+            String aliasContext = BasicCloudContext.tmpObjectManager.createTmpAlias(aliasName, account, "a" + temporaryNodeId, "" + temporaryNodeId);
+            ((BasicTransaction)cloud).add(aliasContext); // sigh
+        } else if (isNew()) {
+            checkAlias(aliasName);
             getNode().setAlias(aliasName);
         } else {
-            cloud.createAlias(this, aliasName);
+            String owner = cloud.getUser().getOwnerField();
+            if (!getNode().getBuilder().createAlias(getNumber(), aliasName, owner)) {
+                checkAlias(aliasName);
+                throw new BridgeException("Alias " + aliasName + " could not be created.");
+            }
         }
     }
 
@@ -920,7 +931,7 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         if (!isNew()) {
             NodeManager oalias = cloud.getNodeManager("oalias");
             NodeQuery q = oalias.createQuery();
-            Constraint c = q.createConstraint(q.getStepField(oalias.getField("destination")), Integer.valueOf(getNumber()));
+            Constraint c = q.createConstraint(q.getStepField(oalias.getField("destination")), new Integer(getNumber()));
             if (aliasName != null) {
                 Constraint c2 = q.createConstraint(q.getStepField(oalias.getField("name")), aliasName);
                 c = q.createConstraint (c,CompositeConstraint.LOGICAL_AND,c2);
@@ -935,44 +946,37 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         }
     }
 
-    @Override
     public void deleteAlias(String aliasName) {
-        checkWrite();
+        edit(ACTION_EDIT);
         deleteAliases(aliasName);
     }
 
 
     // javadoc inherited (from Node)
-    @Override
     public void setContext(String context) {
         // set the context on the node (run after insert).
         getNode().setContext(cloud.getUser(), context, temporaryNodeId == -1);
     }
 
     // javadoc inherited (from Node)
-    @Override
     public String getContext() {
         return getNode().getContext(cloud.getUser());
     }
 
 
     // javadoc inherited (from Node)
-    @Override
     public StringList getPossibleContexts() {
         return new BasicStringList(getNode().getPossibleContexts(cloud.getUser()));
     }
 
-    @Override
     public boolean mayWrite() {
         return isNew() || cloud.check(Operation.WRITE, getNode().getNumber());
     }
 
-    @Override
     public boolean mayDelete() {
         return isNew() || cloud.check(Operation.DELETE, getNode().getNumber());
     }
 
-    @Override
     public boolean mayChangeContext() {
         return isNew() || cloud.check(Operation.CHANGE_CONTEXT, getNode().getNumber());
     }
@@ -980,7 +984,6 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
     /**
      * Reverse the buffers, when changed and not stored...
      */
-    @Override
     protected void finalize() {
         // When not commit-ed or cancelled, and the buffer has changed, the changes must be reversed.
         // when not done it results in node-lists with changes which are not performed on the database...
@@ -995,21 +998,28 @@ public class BasicNode extends org.mmbase.bridge.util.AbstractNode implements No
         }
     }
 
-    public Collection<Function<?>> getFunctions() {
+
+    /**
+     * @see java.lang.Object#hashCode()
+     *
+     * @since MMBase-1.6.2
+     */
+    public int hashCode() {
+        return getNode().hashCode();
+    }
+
+    public Collection  getFunctions() {
         return  getNode().getFunctions();
     }
 
-    @Override
-    protected Function<?> getNodeFunction(String functionName) {
+    protected Function getNodeFunction(String functionName) {
         return getNode().getFunction(functionName);
     }
 
 
-    @Override
     public Parameters createParameters(String functionName) {
         return getNode().getFunction(functionName).createParameters();
     }
-    @Override
     protected FieldValue createFunctionValue(Object result) {
         return new BasicFunctionValue(getCloud(), result);
     }
